# chat

./: .gitignore  Dockerfile  compose.yml  requirements.txt
client/: .gitignore  README.md  index.html  package-lock.json  package.json
client/public/css/: style.css
client/src/: App.vue  router.js
client/src/components/: ChatInput.vue  ChatList.vue  ChatMessages.vue
client/src/components/body/: ChatChoice.vue  ChatMain.vue  Main.vue
client/src/components/body/Messanger/: ChatList.vue  ChatMessage.vue  ChatMessages.vue  MessageInput.vue  MessagesHistory.vue  OnlineUsersList.vue
client/src/components/footer/: Footer.vue
client/src/components/header/: Header.vue
client2/: Dockerfile  compose.yml  package-lock.json  package.json
client2/src/: App.js
client2/src/Components/Header/: NavBar.js
client2/src/Components/Main/: Main.js
client2/src/Components/Main/Chat/: Chat.js  ChatHistory.js  ChatInput.js  ChatList.js  ChatMessage.js  ChatMessages.js  Room.js
client2/src/Components/Main/User/: Login.js
server/: .env  pyproject.toml
server/__project__/: asgi.py  settings.py  urls.py  wsgi.py
server/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
server/chat/migrations/: 0001_initial.py  0002_alter_message_options_alter_room_options_and_more.py
server/chat/static/: index.js  room.js
server/chat/templates/: index.html  room.html
server/core/: urls.py  views.py
server/core/templates/: base.html  main_page.html
server/core/templates/include/: sidebar.html
server/core/templates/include/header/: header.html
