[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["excel <danil_gorokhov@list.ru>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
django = "^4.2.1"
python-environ = "^0.4.54"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
